--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.App {  
+  align-self: center;
+  background-color: #f5f5f5;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  min-height: 100vh;
+  position: relative;
+  padding: 15px;  
 }
 
-.App-link {
-  color: #61dafb;
+.Content {
+  min-height: 35vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+h1 {
+  font-size: 1.5rem;
+}
+
+@media (min-width: 576px) {
+  h1 {
+    font-size: 2.4rem;
   }
 }
